Disable Lint/AmbiguousRegexpLiteral cop
The cop doesn't like this (perfectly reasonable, IMO) construction in
RSpec tests:

```ruby
expect(foo).to match /bar/
```

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -47,3 +47,5 @@ Lint/AmbiguousOperator:
   Enabled: false
 Lint/NonLocalExitFromIterator:
   Enabled: false
+Lint/AmbiguousRegexpLiteral:
+  Enabled: false
