Enable Style/MutableConstant cop
I'm not 100% convinced that freezing constants is worth it (since arrays
or hashes often have mutable sub-objects), but I guess consistency is
good...

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -41,6 +41,8 @@ Style/Not:
   Enabled: true
 Style/IndentationWidth:
   Enabled: true
+Style/MutableConstant:
+  Enabled: true
 
 # Dumb lint cops
 Lint/AmbiguousOperator:
