--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -110,6 +110,8 @@ Metrics/LineLength:
   Max: 120
   AllowHeredoc: true
   AllowURI: true
+Style/MultilineIfThen:
+  Enabled: true
 
 # Dumb lint cops
 Lint/AmbiguousOperator:
