--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -112,6 +112,8 @@ Metrics/LineLength:
   AllowURI: true
 Style/MultilineIfThen:
   Enabled: true
+Style/Semicolon:
+  Enabled: true
 
 # Dumb lint cops
 Lint/AmbiguousOperator:
