--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -14,10 +14,63 @@ inherit_from:
   ./rubocop_lint.yml
 
 # Good style cops
-Style/TrailingBlankLines:
+Layout/TrailingBlankLines:
   Enabled: true
-Style/TrailingWhitespace:
+Layout/TrailingWhitespace:
   Enabled: true
+Layout/EmptyLineBetweenDefs:
+  Enabled: true
+Layout/IndentationWidth:
+  Enabled: true
+Layout/AccessModifierIndentation:
+  Enabled: true
+Layout/AlignArray:
+  Enabled: true
+Layout/AlignHash:
+  Enabled: true
+Layout/AlignParameters:
+  Enabled: true
+Layout/CaseIndentation:
+  Enabled: true
+Layout/ClosingParenthesisIndentation:
+  Enabled: true
+Layout/CommentIndentation:
+  Enabled: true
+Layout/ElseAlignment:
+  Enabled: true
+Layout/EmptyLines:
+  Enabled: true
+Layout/EndOfLine:
+  Enabled: true
+Layout/ExtraSpacing:
+  Enabled: true
+Layout/InitialIndentation:
+  Enabled: true
+Layout/IndentationConsistency:
+  Enabled: true
+Layout/IndentHash:
+  Enabled: true
+Layout/LeadingCommentSpace:
+  Enabled: true
+Layout/RescueEnsureAlignment:
+  Enabled: true
+Layout/SpaceBeforeFirstArg:
+  Enabled: true
+Layout/SpaceAfterColon:
+  Enabled: true
+Layout/SpaceAfterComma:
+  Enabled: true
+Layout/SpaceAfterMethodName:
+  Enabled: true
+Layout/SpaceBeforeBlockBraces:
+  Enabled: true
+Layout/SpaceBeforeComma:
+  Enabled: true
+Layout/SpaceInsideParens:
+  Enabled: true
+Layout/Tab:
+  Enabled: true
+
 Style/FrozenStringLiteralComment:
   Enabled: true
   EnforcedStyle: always
@@ -31,92 +84,41 @@ Style/MethodCallWithoutArgsParentheses:
   Enabled: true
 Style/InfiniteLoop:
   Enabled: true
-Style/EmptyLineBetweenDefs:
-  Enabled: true
 Style/StringLiterals:
   Enabled: true
 Style/AndOr:
   Enabled: true
 Style/Not:
   Enabled: true
-Style/IndentationWidth:
-  Enabled: true
 Style/MutableConstant:
-  Enabled: true
-Style/AccessModifierIndentation:
-  Enabled: true
-Style/AlignArray:
-  Enabled: true
-Style/AlignHash:
-  Enabled: true
-Style/AlignParameters:
-  Enabled: true
-Style/CaseIndentation:
   Enabled: true
 Style/ClassAndModuleCamelCase:
   Enabled: true
-Style/ClosingParenthesisIndentation:
-  Enabled: true
-Style/CommentIndentation:
-  Enabled: true
 Style/ConstantName:
-  Enabled: true
-Style/ElseAlignment:
-  Enabled: true
-Style/EmptyLines:
-  Enabled: true
-Style/EndOfLine:
-  Enabled: true
-Style/ExtraSpacing:
   Enabled: true
 Style/FileName:
   Enabled: true
-Style/InitialIndentation:
-  Enabled: true
 Style/HashSyntax:
-  Enabled: true
-Style/IndentationConsistency:
-  Enabled: true
-Style/IndentHash:
-  Enabled: true
-Style/LeadingCommentSpace:
   Enabled: true
 Style/MethodName:
   Enabled: true
 Style/RedundantFreeze:
-  Enabled: true
-Style/RescueEnsureAlignment:
-  Enabled: true
-Style/SpaceBeforeFirstArg:
-  Enabled: true
-Style/SpaceAfterColon:
-  Enabled: true
-Style/SpaceAfterComma:
-  Enabled: true
-Style/SpaceAfterMethodName:
-  Enabled: true
-Style/SpaceBeforeBlockBraces:
-  Enabled: true
-Style/SpaceBeforeComma:
-  Enabled: true
-Style/SpaceInsideParens:
-  Enabled: true
-Style/Tab:
   Enabled: true
 Style/VariableName:
   Enabled: true
 Style/TrailingCommaInLiteral:
   Enabled: true
   EnforcedStyleForMultiline: consistent_comma
+Style/MultilineIfThen:
+  Enabled: true
+Style/Semicolon:
+  Enabled: true
+
 Metrics/LineLength:
   Enabled: true
   Max: 120
   AllowHeredoc: true
   AllowURI: true
-Style/MultilineIfThen:
-  Enabled: true
-Style/Semicolon:
-  Enabled: true
 
 # Dumb lint cops
 Lint/AmbiguousOperator:
