RF-4000 Enable Style/Exception cop

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -114,6 +114,8 @@ Style/MultilineIfThen:
   Enabled: true
 Style/Semicolon:
   Enabled: true
+Style/SignalException:
+  Enabled: true
 
 Metrics/LineLength:
   Enabled: true
