RF-5192 no_comma rule for multi-line method calls

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -107,6 +107,9 @@ Style/HashSyntax:
   Enabled: true
 Style/RedundantFreeze:
   Enabled: true
+Style/TrailingCommaInArguments:
+  Enabled: true
+  EnforcedStyleForMultiline: no_comma
 Style/TrailingCommaInLiteral:
   Enabled: true
   EnforcedStyleForMultiline: consistent_comma
