--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -116,6 +116,8 @@ Style/Semicolon:
   Enabled: true
 Style/SignalException:
   Enabled: true
+Style/SymbolProc:
+  Enabled: true
 
 Metrics/LineLength:
   Enabled: true
