RF-5192 Fix Circle CI config
The previous config didn't work due to an indentation error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,32 @@
 version: 2
 
 jobs:
-  gem_release:
+  push_to_rubygems:
     docker:
       - image: circleci/ruby:2.4.4
     steps:
       - checkout
       - run:
-        name: Create .gem/credentials file
-        command: |
-          mkdir ~/.gem
-          echo "---
-            :rubygems_api_key: $RUBYGEMS_API_KEY
-          " > ~/.gem/credentials
-          chmod 600 ~/.gem/credentials
+          name: Create .gem/credentials file
+          command: |
+            mkdir ~/.gem
+            echo "---
+              :rubygems_api_key: $RUBYGEMS_API_KEY
+            " > ~/.gem/credentials
+            chmod 600 ~/.gem/credentials
       - run:
-        name: Release rf-stylez
-        command: rake release
+          name: Release rf-stylez
+          command: rake release
 
 workflows:
   version: 2
   gem_release:
     jobs:
-      - gem_release:
-        filters:
+      - push_to_rubygems:
+          filters:
             branches:
-              only: master
+              only:
+                - master
             tags:
-              only: /^v.*/
+              only:
+                - /^v.*/
