RF-5192 Ignore all branches because filters key uses 'or' no 'and'

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ workflows:
       - push_to_rubygems:
           filters:
             branches:
-              only:
-                - master
+              ignore:
+                - /.*/
             tags:
               only:
                 - /^v.*/
