add style/regexpliteral rule

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -121,6 +121,8 @@ Style/SignalException:
   Enabled: true
 Style/SymbolProc:
   Enabled: true
+Style/RegexpLiteral:
+  Enabled: true
 
 Metrics/LineLength:
   Enabled: true
