--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -110,7 +110,10 @@ Style/RedundantFreeze:
 Style/TrailingCommaInArguments:
   Enabled: true
   EnforcedStyleForMultiline: no_comma
-Style/TrailingCommaInLiteral:
+Style/TrailingCommaInArrayLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: consistent_comma
+Style/TrailingCommaInHashLiteral:
   Enabled: true
   EnforcedStyleForMultiline: consistent_comma
 Style/MultilineIfThen:
