Warn about global and special variables
Our style guides prefers we don't use global variables or special
variables such as $_ / $. / etc.

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -105,6 +105,10 @@ Naming/FileName:
 Naming/MethodName:
   Enabled: true
 
+Style/SpecialGlobalVars:
+  Enabled: true
+Style/GlobalVars:
+  Enabled: true
 Style/FrozenStringLiteralComment:
   Enabled: true
   EnforcedStyle: always
