Create cop for suggesting people use API::Base and not Grape::API

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -19,11 +19,14 @@ inherit_from:
 require:
   - rf/stylez
 
+# Custom cops
 Lint/NoENV:
   Enabled: true
 Lint/NoHTTParty:
   Enabled: true
 Lint/Obscure:
+  Enabled: true
+Lint/NoGrapeAPI:
   Enabled: true
 
 # Good style cops
