RF-6750 Tell people to use MultiJSON instead of JSON

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -30,6 +30,8 @@ Lint/NoGrapeAPI:
   Enabled: true
 Lint/UsePositiveInt32Validator:
   Enabled: true
+Lint/NoJSON:
+  Enabled: true
 
 # Good style cops
 Layout/BlockAlignment:
