The Layout/IndentHash cop has been renamed to Layout/IndentFirstHashElement

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -76,7 +76,7 @@ Layout/InitialIndentation:
   Enabled: true
 Layout/IndentationConsistency:
   Enabled: true
-Layout/IndentHash:
+Layout/IndentFirstHashElement:
   Enabled: true
 Layout/LeadingCommentSpace:
   Enabled: true
