--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -50,6 +50,7 @@ Layout/TrailingWhitespace:
   Enabled: true
 Layout/EmptyLineBetweenDefs:
   Enabled: true
+  EmptyLineBetweenClassDefs: false
 Layout/IndentationWidth:
   Enabled: true
 Layout/AccessModifierIndentation:
