--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -135,7 +135,18 @@ Style/MethodCallWithoutArgsParentheses:
 Style/InfiniteLoop:
   Enabled: true
 Style/StringLiterals:
+  Description: 'Checks if uses of quotes match the configured preference.'
+  StyleGuide: '#consistent-string-literals'
   Enabled: true
+  VersionAdded: '0.9'
+  VersionChanged: '0.36'
+  EnforcedStyle: double_quotes
+  SupportedStyles:
+    - single_quotes
+    - double_quotes
+  # If `true`, strings which span multiple lines using `\` for continuation must
+  # use the same type of quotes on each line.
+  ConsistentQuotesInMultiline: true
 Style/AndOr:
   Enabled: true
 Style/Not:
