Enforce an empty line after magic comments

--- a/ruby/rubocop.yml
+++ b/ruby/rubocop.yml
@@ -186,6 +186,8 @@ Layout/LineLength:
   Max: 120
   AllowHeredoc: true
   AllowURI: true
+Layout/EmptyLineAfterMagicComment:
+  Enabled: true
 
 # Dumb lint cops
 Lint/AmbiguousOperator:
