Ignore reek utility function in spec files

--- a/ruby/.reek.yml
+++ b/ruby/.reek.yml
@@ -54,7 +54,7 @@ directories:
         - validate_param!
     InstanceVariableAssumption:
       enabled: false
-  "spec/mailers/previews":
+  "spec":
     UtilityFunction:
       enabled: false
 
