--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,21 @@ jobs:
             gem build rf-stylez
             gem push rf-stylez-*.gem
 
+  update_jira:
+    docker:
+      - image: alpine:3.8
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_TOKEN
+    steps:
+      - run:
+          name: Install dependencies
+          command: apk add --no-cache bash curl git openssh
+      - checkout
+      - run:
+          name: Update JIRA
+          command: .circleci/update-jira.sh
+
 workflows:
   version: 2
   gem_release:
@@ -70,3 +85,13 @@ workflows:
           context:
             - DockerHub
             - RubyGems
+      - update_jira:
+          requires:
+            - push_to_rubygems
+          filters:
+            branches:
+              only:
+                - master
+          context:
+            - DockerHub
+            - update-jira-webhook
