RF-32115 Enable some rubocop-rails cops

--- a/rails/rubocop.yml
+++ b/rails/rubocop.yml
@@ -1,1 +1,16 @@
 require: rubocop-rails
+
+Rails/AddColumnIndex:
+  Enabled: true
+Rails/DuplicateAssociation:
+  Enabled: true
+Rails/Presence:
+  Enabled: true
+Rails/Present:
+  Enabled: true
+Rails/ReversibleMigration:
+  Enabled: true
+Rails/ReversibleMigrationMethodDefinition:
+  Enabled: true
+Rails/TransactionExitStatement:
+  Enabled: true
