Update ruleset based on another project rubocop.yml we use

--- a/rails/rubocop.yml
+++ b/rails/rubocop.yml
@@ -8,3 +8,7 @@ Rails/HasManyOrHasOneDependent:
   Enabled: false
 Rails/TimeZone:
   Enabled: false
+Rails/ApplicationJob:
+  Enabled: false
+Rails/HttpPositionalArguments:
+  Enabled: false
