--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: cimg/ruby:3.2.2
+      - image: cimg/ruby:3.3.6
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_TOKEN
@@ -12,7 +12,10 @@ jobs:
       - run:
           name: Install Ruby gems
           command: |
-            bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
+            gem install bundler
+            bundle config set --local path 'vendor/bundle'
+            bundle config set --local without pronto
+            bundle check || bundle install --jobs=`nproc` --retry=3
       - run:
           name: Set up test output directory
           command: sudo install -o circleci -d ~/rspec
@@ -32,7 +35,7 @@ jobs:
 
   push_to_rubygems:
     docker:
-      - image: cimg/ruby:3.2.2
+      - image: cimg/ruby:3.3.6
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_TOKEN
